[package]
name = "rdhcpd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dhcp4r = "0.2"
serde_yaml = "0.9"
serde_json = "1.0"
mac_address = "1.1"
duration-str = "0.7"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive", "string", "env"] }
